# gpt-battle

backend/: .env.example  README.md  main.py  pyproject.toml
backend/docs/: IMPLEMENTATION_PLAN.md
backend/lib/: config.py  db.py  openrouter.py  orchestrator.py
backend/lib/core/: agent.py  engine.py  game.py  persistence.py  types.py
backend/lib/games/tictactoe/: agents.py  models.py  spec.py
backend/remote/: deploy.py
webapp/: bun.lockb  drizzle.config.ts  package.json
webapp/src/: env.js  middleware.ts
webapp/src/app/: layout.tsx  page.tsx
webapp/src/app/admin/: page.tsx
webapp/src/app/dashboard/: page.tsx
webapp/src/app/dashboard/matches/: page.tsx
webapp/src/app/dashboard/matches/[id]/: page.tsx
webapp/src/components/: loading-button.tsx
webapp/src/components/admin/: users-table.tsx
webapp/src/components/auth/: forgot-password-form.tsx  reset-password-form.tsx  signin-form.tsx  signout-button.tsx  signup-form.tsx
webapp/src/components/tictactoe/: matches-list.tsx  replay-viewer.tsx
webapp/src/components/ui/: form.tsx
webapp/src/hooks/: use-toast.ts
webapp/src/server/api/: root.ts  trpc.ts
webapp/src/server/api/routers/: match.ts
webapp/src/server/auth/: index.ts
webapp/src/server/db/: index.ts
webapp/src/server/db/match/: schema.ts
webapp/src/styles/: globals.css
webapp/src/types/: tictactoe.ts
webapp/src/types/tictactoe/v1/: action.schema.json  observation.schema.json  state.schema.json
